--- a/app/views/static_pages/register/modals/_user-name-phone.erb
+++ b/app/views/static_pages/register/modals/_user-name-phone.erb
@@ -1,6 +1,6 @@
 <div data-role="page" class="wrapper" id="page1">
 
-  <%= erb :'components/navbar' %>
+  <%= render 'static_pages/components/navbar' %>
     
       <div data-role="main" class="body">
         <div class="container first-page">
