--- a/app/views/static_pages/signup/modals/_invite-teacher.erb
+++ b/app/views/static_pages/signup/modals/_invite-teacher.erb
@@ -1,5 +1,5 @@
   <div data-role="page" class="wrapper" id="page2-invite-teacher">
-    <%= erb :'components/navbar' %>
+    <%= render 'static_pages/components/navbar' %>
       <div data-role="main" class="body invite-teacher" style="vertical-align: top;">
         <div class="container password">
           <a href="#page4-find-school">
