--- a/app/views/static_pages/signup/modals/_school-info.erb
+++ b/app/views/static_pages/signup/modals/_school-info.erb
@@ -8,7 +8,7 @@
       <!-- Modal Signup -->
       <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> -->
       <div data-role="page" class="wrapper" id="page6-school-info">
-        <%= erb :'components/navbar' %>
+        <%= render 'static_pages/components/navbar' %>
      
         <div data-role="main" class="body invite-teacher">
 
