--- a/app/views/static_pages/register/modals/_maintenance.erb
+++ b/app/views/static_pages/register/modals/_maintenance.erb
@@ -9,7 +9,7 @@
 </style>
 
 <div data-role="page" class="wrapper" id="page5">
-  <%= erb :'components/navbar' %>
+  <%= render 'static_pages/components/navbar' %>
 
         <div data-role="main" class="pure-g">
           <div class="pure-u-1">
