--- a/app/views/static_pages/signup/index.erb
+++ b/app/views/static_pages/signup/index.erb
@@ -2,13 +2,13 @@
 <html>
 <head>
   
-    <%= erb :'components/headers' %>
+    <%= render 'static_pages/components/headers' %>
     
-    <%= erb :'signup/headers/mixpanel', locals: {mixpanel_homepage_key: mixpanel_homepage_key} %>
+    <%= render 'static_pages/signup/headers/mixpanel', locals: {mixpanel_homepage_key: @mixpanel_homepage_key} %>
 
-    <%= erb :'signup/headers/libraries' %>
+    <%= render 'static_pages/signup/headers/libraries' %>
     
-    <%= erb :'components/favicon' %>
+    <%= render 'static_pages/components/favicon' %>
 
     <!-- our scripts -->
     <script type="text/javascript" src="/js/validations.js"></script>
@@ -26,16 +26,16 @@
 
 <body id="override">
   <!-- navbar -->
-  <%= erb :'signup/modals/role' %>
-  <%= erb :'signup/modals/invite-teacher' %>
-  <%= erb :'signup/modals/signature' %>
-  <%= erb :'signup/modals/find-school' %>
-  <%= erb :'signup/modals/school-info' %>
-  <%= erb :'signup/modals/success' %>
-  <%= erb :'signup/modals/get-app', locals: {subtitle_app: subtitle_app, header_app: header_app} %>
-  <%= erb :'signup/modals/invite' %>
-  <%= erb :'signup/modals/inviteFollow' %>
-  <%= erb :'signup/modals/go-to-dashboard' %>
+  <%= render 'static_pages/signup/modals/role' %>
+  <%= render 'static_pages/signup/modals/invite-teacher' %>
+  <%= render 'static_pages/signup/modals/signature' %>
+  <%= render 'static_pages/signup/modals/find-school' %>
+  <%= render 'static_pages/signup/modals/school-info' %>
+  <%= render 'static_pages/signup/modals/success' %>
+  <%= render 'static_pages/signup/modals/get-app', locals: {subtitle_app: @subtitle_app, header_app: @header_app} %>
+  <%= render 'static_pages/signup/modals/invite' %>
+  <%= render 'static_pages/signup/modals/inviteFollow' %>
+  <%= render 'static_pages/signup/modals/go-to-dashboard' %>
 <footer>
 
     <script>
