--- a/app/views/static_pages/signup/modals/_go-to-dashboard.erb
+++ b/app/views/static_pages/signup/modals/_go-to-dashboard.erb
@@ -13,7 +13,7 @@
 </style>
 
 <div data-role="page" class="wrapper" id="page8-go-to-dashboard">
-  <%= erb :'components/navbar' %>
+  <%= render 'static_pages/components/navbar' %>
 
         <div data-role="main" class="body invite-teacher pure-g">
           <div class="container">
