--- a/app/views/static_pages/signup/modals/_invite.erb
+++ b/app/views/static_pages/signup/modals/_invite.erb
@@ -1,6 +1,6 @@
   <!-- navbar -->
       <div data-role="page" class="wrapper" id="page9-get-invites">
-        <%= erb :'components/navbar' %>
+        <%= render 'static_pages/components/navbar' %>
      
         <div data-role="main" class="body invite-teacher">
 
