--- a/app/views/static_pages/signup/modals/_parent-school.erb
+++ b/app/views/static_pages/signup/modals/_parent-school.erb
@@ -51,7 +51,7 @@
 </style>
 
       <div data-role="page" class="wrapper" id="page2-parent-school">
-        <%= erb :'components/navbar' %>
+        <%= render 'static_pages/components/navbar' %>
      
         <div data-role="main" class="body invite-teacher">
 
