--- a/app/views/static_pages/signup/modals/_role.erb
+++ b/app/views/static_pages/signup/modals/_role.erb
@@ -7,7 +7,7 @@
 
  <div data-role="page" class="wrapper role" id="page1-choose-role">
 
-  <%= erb :'components/navbar' %>
+  <%= render 'static_pages/components/navbar' %>
       <div data-role="main" class="body" style="display: block;">
         <div class="pure-g">
           
