--- a/app/views/static_pages/signup/modals/_signature.erb
+++ b/app/views/static_pages/signup/modals/_signature.erb
@@ -1,5 +1,5 @@
   <div data-role="page" class="wrapper" id="page3-signature">
-    <%= erb :'components/navbar' %>
+    <%= render 'static_pages/components/navbar' %>
       <div data-role="main" class="body invite-teacher" style="vertical-align: top;">
         <div class="container password">
           <div class="pure-g">
