basic user modelling and validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'webpack-bundle' %>
+
   </head>
 
   <body>
+    <% flash.each do |message_type, message| %>
+      <p class="alert alert-<%= message_type %>"><%= message %></p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
