signup set up up to add students, needs cleanup

--- a/app/views/static_pages/signup/modals/_find-school.erb
+++ b/app/views/static_pages/signup/modals/_find-school.erb
@@ -119,7 +119,7 @@
                       var availableSchools = [];
                         
                         $( "#page4-find-school input[name=school_name]" ).autocomplete({
-                          source: '/auth/list-of-schools',
+                          source: 'https://www.joinstorytime.com/auth/list-of-schools',
                           minLength: 2,
                           appendTo: "#just-to-append",
                           position: { my: "left top", at: "left bottom", of: "#status-text" },
@@ -204,34 +204,20 @@
                     });
 
                     $('#page4-find-school select[name=classroom_grade]').change(function(event){
-                      // get the grade
-                      var grade = $('#page4-find-school select[name=classroom_grade]').val();
-                      grade = parseInt(grade); 
 
-                    var role = $('form#choose-educator-role-form').find('input[name=role]').val();
+                      // Here's a good place to change the next page based on the inputted grade
+                      // i.e. if grade too old, show we don't support it, don't let user advance
 
-                    // Allow up to (and including) 1st grade teachers!  
-                    if (grade <= 1) {
-                      if (role == "parent") {
-                        $('#page4link').attr('href', '#page2-invite-teacher');
-                      }
-                      else if (isMobileDevice()){
-                        $('#page4link').attr('href', '#page7');
-                      }
-                      else {
-                        $('#page4link').attr('href', '#');
-                      }
-                    } else {
-                      $('#page4link').attr('href', '#page8-go-to-dashboard');
-                      // change the page5 text maybe?
-                      // or maybe just have a separated page with that text
-                    }
-                      // check which one
-
-                      // change link based on that
-
+                      // var grade = $('#page4-find-school select[name=classroom_grade]').val();
+                      // grade = parseInt(grade); 
+                      // if (grade... ) {
+                      //   $('#page4link').attr('href', '#');
+                      // }
+                          
+                      // for now default to going to the next page 
+                      $('#page4link').attr('href', '#page3-signature');
+                      
                     });
-
 
                     $(document).on('click', '#page4-find-school #page4link',function(event){
                       var ValidStatus = $("#page4-find-school #school-info").valid();
@@ -242,56 +228,8 @@
                           mixpanel.track('invalid school info given');
                           return false;
                       }
-
-                      var role = $('form#choose-educator-role-form').find('input[name=role]').val();
-
-                      $('#page4-find-school form#school-info').find('input[name=role]').val(role);
-
-                      var sig = $('form#educator-signature-form').find('input[name=signature]').val();
-
-                      $('#page4-find-school form#school-info').find('input[name=signature]').val(sig);    
-
-                      // check if preschool or below
-                      // if preschool, perform the regular action of logging in
-                      // 
-                      // if not, forward to page6 or whatever and change the text to say that we don't do older grades
-                      // 
-
-                      if (role != 'parent') {
-
-                        $.ajax({
-                          url: 'freemium-signup',
-                          type: 'post',
-                          data: $('#page4-find-school form#school-info').serialize()
-                        }).done(function(data, statusText, xhr) {
-                            console.log(data);
-                            console.log('statusText is:');
-                            console.log(statusText);
-                            console.log(xhr);
-
-                            var grade = $('#page4-find-school select[name=classroom_grade]').val();
-                            grade = parseInt(grade); 
-
-                            // Allow up to (and including) 1st grade teachers!  
-                            if (grade <= 1) {
-                              $('#page6-school-info form#log-into-dat-account').submit();
-                              // we're going to go to the dashboard.
-                            }
-                            // $('form#log-into-dat-account input[name=password]').val(data);
-                        });
-
-                        var formdata = $("#page4-find-school form#school-info").serializeArray();
-                        console.log(formdata);
-                        var data = {};
-                        $(formdata).each(function(index, obj){
-                            data[obj.name] = obj.value;
-                        });
-                        console.log(data);
-                        mixpanel.people.set(data);
-                        mixpanel.track('finished freemium signup');
-
-                      }
                     });
+
 
 
                   </script>
