--- a/app/views/static_pages/signup/modals/_signature.erb
+++ b/app/views/static_pages/signup/modals/_signature.erb
@@ -13,7 +13,7 @@
                       <input name="signature" placeholder="Ms. Jones" class="input" required>
                       <input type="hidden" name="role" value="">
                     </div>
-                     <a id="page3link" class="transition-link ui-btn web-mobile-signup-button" href="#page4-find-school" data-transition="fade">
+                     <a id="page3link" class="transition-link ui-btn web-mobile-signup-button" href="#page???-add-students" data-transition="fade">
                         <%= "Save" %>
                      </a>
 
