front-end for adding students in signup [wip]

--- a/app/views/static_pages/signup/modals/_signature.erb
+++ b/app/views/static_pages/signup/modals/_signature.erb
@@ -14,7 +14,7 @@
                       <input type="hidden" name="role" value="">
                     </div>
 
-                     <a id="page3link" class="transition-link ui-btn web-mobile-signup-button" href="#page???-add-students" data-transition="fade">
+                     <a id="page3link" class="transition-link ui-btn web-mobile-signup-button" href="#page5-add-students" data-transition="fade">
 
                         <%= "Save" %>
                      </a>
