--- a/public/stylesheets/sass/freemium-signup.scss
+++ b/public/stylesheets/sass/freemium-signup.scss
@@ -14,6 +14,10 @@ body {
   position: relative;
 }
 
+#add-students.signup-form {
+  position: relative;
+}
+
 .dropdown-menu {
   position: absolute;
   width: 100%;
