--- a/app/views/static_pages/signup/index.erb
+++ b/app/views/static_pages/signup/index.erb
@@ -30,7 +30,7 @@
   <%= render 'static_pages/signup/modals/find-school' %>
   <%= render 'static_pages/signup/modals/school-info' %>
   <%= render 'static_pages/signup/modals/signature' %>
-
+  <%= render 'static_pages/signup/modals/add_students' %>
   <%= render 'static_pages/signup/modals/success' %>
   <%= render 'static_pages/signup/modals/get-app', locals: {subtitle_app: @subtitle_app, header_app: @header_app} %>
   <%= render 'static_pages/signup/modals/invite' %>
