--- a/app/views/static_pages/homepage/modals/_signup-name-password.erb
+++ b/app/views/static_pages/homepage/modals/_signup-name-password.erb
@@ -20,7 +20,7 @@
                   <div class="field" id="signup-field">
                       <input name="user[first_name]" id="signup-first-input" autocomplete="off" placeholder="First name" class="input" required>
                       <input name="user[last_name]" id="signup-last-input" autocomplete="off" placeholder="Last name" class="input" required>
-                      <input name="user[password]" id="signup-password-input" autocomplete="off" placeholder="Password" type="password" class="input" required>
+                      <input name="user[password]" id="signup-password-input" autocomplete="off" placeholder="Password" type="password" class="input" pattern=".{6,}" title="Password must be at least 6 characters long" required>
                   </div>
                   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
