--- a/app/views/static_pages/homepage/index.erb
+++ b/app/views/static_pages/homepage/index.erb
@@ -165,7 +165,7 @@
   <!-- mobile splash -->
     <div class="splash-new-mobile">
     <div class="splash-container">
-      <h1>Automatic running records.</h1>
+      <h1>ReadUp does running records for you.</h1>
       <h4>ReadUp listens to students read and creates a full running record for you.</h4>
 
 
@@ -207,7 +207,7 @@
   <div class="splash-new">
     <div class="splash-container">
       <div class="title" style="width:40em;">
-        <h1 id="pitch">Automatic running records.</h1>
+        <h1 id="pitch">ReadUp does running records for you.</h1>
         <center><h4 id="sub-pitch" style="width:35em">ReadUp listens to students read and creates a full running record for you.</h4></center>
         <button type="button" data-toggle="modal" data-target="#signupEmail" class="btn btn-primary btn-lg pure-button pure-button-primary get_update dialog-button" id="main-signup-button" onclick="mixpanel.track('splash signup button clicked', {'location': 'splash'});">
                     Sign up
