--- a/app/views/static_pages/components/_headers.erb
+++ b/app/views/static_pages/components/_headers.erb
@@ -3,11 +3,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-<meta name="description" content="StoryTime is a free app that lets teachers send children's books to families on any phone. It is shown to build literacy and double reading at home.">
+<meta name="description" content="ReadUp listens to elementary students read and creates a full running record for you with miscue analysis, accuracy, fluency rate, and comprehension.">
 
 
 <meta property="og:image" content="https://s3.amazonaws.com/st-webpage/assets/st-og-image-3.png">
-<meta property="og:title" content="StoryTime | Free Children's Books Online for Teachers">
+<meta property="og:title" content="ReadUp | The easiest way to asssess reading fluency.">
 <meta property="og:description" content="StoryTime is a free app that lets teachers send children's books to families on any phone. It is shown to build literacy and double reading at home.">
 
 <script async type="text/javascript" src="/js/analytics.js"></script>
