basic layout for student dashboard

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -7,6 +7,10 @@ body {
   line-height: 18px;
 }
 
+#fullHeight {
+  height: 100%;
+}
+
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
