--- a/app/views/layouts/student_dashboard.html.erb
+++ b/app/views/layouts/student_dashboard.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
   <head>
     <title>ReactOnRailsWithWebpacker</title>
     <%= csrf_meta_tags %>
@@ -24,7 +24,7 @@
 
   </head>
 
-  <body>
+  <body style="margin: 0px; height: 100%">
     <%= yield %>
 
   </body>
